Bug 167867 - Start center: transparency is missing in logo (GEN)
Summary: Start center: transparency is missing in logo (GEN)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2025-08-08 12:53 UTC by Xisco Faulí
Modified: 2026-01-12 16:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (179.16 KB, image/png)
2025-08-08 12:53 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-08-08 12:53:10 UTC
Created attachment 202250 [details]
screenshot

Steps to reproduce:
1. clean user profile: m -rf instdir/user/
2. Launch SAL_USE_VCLPLUGIN=gen instdir/program/soffice

-> See screenshot

Reproduced in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a0ae1b0cf2661e7be9ea042e5357530f5fb412f5
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-08-08 12:53:42 UTC
Regression introduced by:

commit 2939f4b52d96ef0bd76896dc857f43d4de402d25	[log]
author	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Aug 05 08:26:05 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Tue Aug 05 12:11:50 2025 +0200
tree 8b3959ea3532e21a391405b226411b94fb009e68
parent c2e99a25028cc0d215f7bb50b08b5a25babce26b [diff]

BitmapEx->Bitmap in CanvasBitmap
Comment 2 Commit Notification 2025-08-09 09:08:14 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/20854a6715154836e05b98d2e365f994d19ed676

tdf#167867 Start center: transparency is missing in logo (GEN)

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Weghorn 2026-01-12 16:03:31 UTC
Works fine in master, fixed by the commit from comment 2.

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: b8a107f77dfb7d9bf8c7149d20c1ff5fd2381bb6
CPU threads: 32; OS: Linux 6.17; UI render: default; VCL: x11
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded