tdf#167867 Start center: transparency is missing in logo (GEN)

regression from
    commit 2939f4b52d96ef0bd76896dc857f43d4de402d25
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue Aug 5 08:26:05 2025 +0200
    BitmapEx->Bitmap in CanvasBitmap

which flushed out the fact that the cairo/gen backend
is being very weird when drawing images with alpha,
which is what we are doing in
   Bitmap::Bitmap(const BitmapEx&)

Hit it with a large and ugly hammer for now,
long run we won't need this conversion.

Change-Id: Ia7a09402caf2c8d19833fda828a6b3050cb90604
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189197
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins